Kubernetes/Day-44/test-allow.yaml
apiVersion: v1
kind: Pod
metadata:
  name: label-pod
  labels:
    app: demo
spec:
  containers:
    - name: nginx
      image: nginx:1.27
