Kubernetes/Day-44/test-deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-label-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.27
