Kubernetes/Day-44/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: require-app-label-binding
spec:
  policyName: require-app-label
  validationActions:
    - Deny
  matchResources:
    namespaceSelector: {}
    objectSelector: {}
